--- a/testForCuberto/Base.lproj/Main.storyboard
+++ b/testForCuberto/Base.lproj/Main.storyboard
@@ -1,24 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="testForCuberto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cuberto" translatesAutoresizingMaskIntoConstraints="NO" id="O55-1L-ije">
+                                <rect key="frame" x="87.5" y="30" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="3nX-xI-Wy3"/>
+                                    <constraint firstAttribute="width" constant="200" id="flq-Um-VSh"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6m8-6g-Prv">
+                                <rect key="frame" x="75" y="109" width="242" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.51041270059999999" green="0.64703151160000005" blue="0.57130355870000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="9oQ-jA-8Ba"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="mnS-L1-Ail"/>
+                            </scrollView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="wyX-Gi-g9E">
+                                <rect key="frame" x="20" y="280" width="335" height="78"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXv-hP-AD3">
+                                        <rect key="frame" x="148.5" y="0.0" width="38.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CX7-tn-ujr">
+                                        <rect key="frame" x="41.5" y="44" width="252" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="Auf-de-C7T"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="252" id="KJK-rx-7Vq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.20689427852630615" green="0.56440949440002441" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="O55-1L-ije" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="BDr-U3-vEh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wyX-Gi-g9E" secondAttribute="trailing" constant="20" id="MzR-LQ-pN8"/>
+                            <constraint firstItem="O55-1L-ije" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f8n-2c-mu3"/>
+                            <constraint firstItem="wyX-Gi-g9E" firstAttribute="top" secondItem="O55-1L-ije" secondAttribute="bottom" constant="50" id="hqb-Qa-buw"/>
+                            <constraint firstItem="wyX-Gi-g9E" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pdD-lr-2ub"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="6m8-6g-Prv"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="emailBar" destination="6m8-6g-Prv" id="YYY-yC-POb"/>
+                        <outlet property="emailTextField" destination="CX7-tn-ujr" id="kEX-cJ-fL5"/>
+                        <outlet property="infoLabel" destination="NXv-hP-AD3" id="LwB-XG-po4"/>
+                        <outlet property="loginImage" destination="O55-1L-ije" id="Moe-ez-YHs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-136.80000000000001" y="139.880059970015"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cuberto" width="900" height="900"/>
+    </resources>
 </document>
